// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletWidget Connected address is properly displayed 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-walletButton-8 MuiButton-containedSecondary MuiButton-disableElevation"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      0x1a1a1...a1a1a1a
      <span
        class="MuiButton-endIcon MuiButton-iconSizeMedium"
      >
        <div
          class="makeStyles-walletDot-5 makeStyles-greenDot-7"
        />
      </span>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`WalletWidget Renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-walletButton-4 MuiButton-containedSecondary MuiButton-disableElevation"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Click to connect
      <span
        class="MuiButton-endIcon MuiButton-iconSizeMedium"
      >
        <div
          class="makeStyles-walletDot-1 makeStyles-redDot-2"
        />
      </span>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
